# questy

./: ddt_checker.py  setup.sh
.github/workflows/: ros2-build-test.yaml
ansible/playbooks/: setup_kit.yaml
ansible/roles/ros2/tasks/: main.yaml
ansible/roles/ros2_build/tasks/: main.yaml
bluetooth_battery_monitor/: CMakeLists.txt  README.md  package.xml
bluetooth_battery_monitor/config/: params.yaml
bluetooth_battery_monitor/include/bluetooth_battery_monitor/: bluetooth_battery_monitor_node.hpp
bluetooth_battery_monitor/launch/: bluetooth_battery_monitor.launch.py
bluetooth_battery_monitor/src/: bluetooth_battery_monitor_node.cpp
diagnostic_safety_gate/: CMakeLists.txt  README.md  package.xml
diagnostic_safety_gate/config/: params.yaml
diagnostic_safety_gate/include/diagnostic_safety_gate/: diagnostic_safety_gate_component.hpp
diagnostic_safety_gate/launch/: diagnostic_safety_gate.launch.py  diagnostic_safety_gate_composable.launch.py
diagnostic_safety_gate/scripts/: test_safety_gate.py
diagnostic_safety_gate/src/: diagnostic_safety_gate_component.cpp
esc_motor_control_python/: package.xml
esc_motor_control_python/config/: esc_motor_control_python.yaml
esc_motor_control_python/esc_motor_control_python/: esc_motor_control_node.py
esc_motor_control_python/launch/: esc_motor_control_python.launch.xml  esc_motor_test.launch.xml
gpio_reader/: CMakeLists.txt  README.md  package.xml
gpio_reader/config/: gpio_reader.yaml
gpio_reader/include/gpio_reader/: gpio_reader_component.hpp
gpio_reader/launch/: gpio_reader.launch.py  gpio_reader.launch.xml  gpio_reader_component.launch.py  gpio_reader_component.launch.xml
gpio_reader/src/: gpio_reader_component.cpp  gpio_reader_node.cpp
gpio_safety_gate/: CMakeLists.txt  README.md  package.xml
gpio_safety_gate/config/: gpio_safety_gate.yaml
gpio_safety_gate/include/gpio_safety_gate/: gpio_safety_gate_component.hpp
gpio_safety_gate/launch/: gpio_safety_gate.launch.py  gpio_safety_gate_component.launch.py
gpio_safety_gate/src/: gpio_safety_gate_component.cpp  gpio_safety_gate_node.cpp
joy_controller/: CMakeLists.txt  package.xml
joy_controller/config/: joy_controller_dual_stick_params.yaml
joy_controller/include/joy_controller/: joy_controller_dual_stick_component.hpp
joy_controller/launch/: joy_controller.launch.xml  joy_controller_referee.launch.xml
joy_controller/src/: joy_controller_component.cpp  joy_controller_dual_stick_component.cpp  joy_controller_dual_stick_node.cpp
joy_gate/: CMakeLists.txt  README.md  package.xml
joy_gate/config/: joy_gate.yaml
joy_gate/include/joy_gate/: joy_gate_component.hpp
joy_gate/launch/: joy_gate.launch.xml  joy_gate_full.launch.xml
joy_gate/src/: joy_gate_component.cpp  joy_gate_node.cpp
joy_safety_gate/: CMakeLists.txt  README.md  package.xml
joy_safety_gate/config/: params.yaml
joy_safety_gate/include/joy_safety_gate/: joy_safety_gate_component.hpp
joy_safety_gate/launch/: joy_safety_gate.launch.py  joy_safety_gate_composable.launch.py  system_with_safety.launch.py
joy_safety_gate/scripts/: test_joy_safety_gate.py
joy_safety_gate/src/: joy_safety_gate_component.cpp
launcher/: CMakeLists.txt  package.xml
launcher/config/: drive_component.yaml  lidar_params.yaml
launcher/launch/: drive_component.launch.xml  lidar_driver.launch.xml  shot_component.launch.xml  shr_core.launch.xml
motor_control_app/: CMakeLists.txt  package.xml
motor_control_app/config/: joy_axis_drive_params.yaml  shot_config.yaml  single_ddt_motor_config.yaml
motor_control_app/include/motor_control_app/: joy_axis_drive_component.hpp  shot_component.hpp  single_ddt_motor_component.hpp
motor_control_app/launch/: drive_component.launch.xml  drive_component_container.launch.xml  joy_axis_drive.launch.py  joy_axis_drive.launch.xml  shot_component.launch.py  shot_component.launch.xml  single_ddt_motor.launch.py  single_ddt_motor.launch.xml  single_ddt_motor_test.launch.py  single_ddt_motor_test.launch.xml
motor_control_app/src/: drive_component.cpp  joy_axis_drive_component.cpp  joy_axis_drive_node.cpp  shot_component.cpp  single_ddt_motor_component.cpp  single_ddt_motor_node.cpp
motor_control_lib/: CMakeLists.txt  package.xml
motor_control_lib/src/: servo_control.cpp
motor_control_lib_simple/: CMakeLists.txt  package.xml
operation_manager/: CMakeLists.txt  README.md  package.xml
operation_manager/config/: operation_manager.yaml
operation_manager/include/operation_manager/: operation_manager_component.hpp
operation_manager/launch/: operation_manager.launch.xml
operation_manager/src/: operation_manager_component.cpp  operation_manager_node.cpp
