<?xml version="1.0"?>
<package format="3">
    <name>diagnostic_safety_gate</name>
    <version>0.1.0</version>
    <description>Diagnostic-based safety gate for motor control commands</description>
    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>geometry_msgs</depend>
    <depend>diagnostic_msgs</depend>
    <depend>std_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
