<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>shr_launcher</name>
    <version>0.0.0</version>
    <description>SHR Core system launcher package with XML-based launch files</description>

    <maintainer email="aki.grade2580@outlook.jp">asa-naki</maintainer>
    <license>MIT</license>

    <author email="aki.grade2580@outlook.jp">asa-naki</author>

    <!-- Build tool dependencies -->
    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <!-- Runtime dependencies for launch files -->
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>launch_xml</exec_depend>

    <!-- Package dependencies -->
    <exec_depend>ddt_motor_control</exec_depend>
    <exec_depend>esc_motor_control</exec_depend>
    <exec_depend>joy_controller</exec_depend>
    <exec_depend>servo_control_ros2</exec_depend>
    <exec_depend>ydlidar_ros2_driver</exec_depend>

    <!-- Standard ROS2 packages -->
    <exec_depend>joy</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <!-- Test dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
