<?xml version="1.0"?>
<package format="3">
    <name>motor_control_lib_simple</name>
    <version>0.1.0</version>
    <description>シンプルなモータ制御ライブラリ</description>

    <maintainer email="maintainer@example.com">Maintainer</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
