<?xml version="1.0"?>
<package format="3">
    <name>motor_control_lib_simple</name>
    <version>0.0.0</version>
    <description>シンプルなモータ制御ライブラリ</description>

    <maintainer email="aki.grade2580@outlook.jp">asa-naki</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
